--- a/presentation.html
+++ b/presentation.html
@@ -97,7 +97,7 @@ chmod 777 presentation.html
 ## Docker run
 ```sh
 docker run --name nginx \
-           --rm -it -p 80:80 \
+           --rm -it -p 90:80 \
            -v $PWD/etc/nginx/nginx.conf:/etc/nginx/nginx.conf \
            -v $PWD/etc/nginx/conf.d:/etc/nginx/conf.d  \
            nginx
@@ -359,6 +359,9 @@ The structure de log is using log_format defined in nginx.conf.
         default 1;
     }
 ```
+
+---
+### The log files (/ var / log / nginx) - server
 ```nginx
 # app
 server {
